更新 README.md 文件，添加数据治理、智能路由、监控指标等新特性说明；优化项目结构，增加相关服务模块的描述；调整配置说明，增强清理和迁移策略的细节。